cleaned up a bit